# XPipe

./: Cargo.toml  README.md  ROADMAP.md  rustfmt.toml
res/: curve.blend  curve.mtl  pipe.blend  pipe.mtl
src/: camera.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  models.rs  resources.rs  shader.wgsl  texture.rs  world.rs
